# otus_arch

./: CMakeLists.txt  conanfile.txt  func.h  main.cpp
.github/workflows/: cmake.yml
src/: solver.h
src/hw1/: solver.test.cpp
src/hw2/: movement.h  rotation.h  structs.h
src/hw2/test/: mover.test.cpp  rotator.test.cpp
src/hw3/: command.h  command_handlers.h  exception_handler.h  handler.test.cpp  log_writer_command.h
src/hw4/: command.h  interfaces.h  movement.h  rotation.h
src/hw4/tests/: burn_fuel.test.cpp
src/hw5/: ioc.h  ioc.test.cpp
src/test_shared/: mock.h  structs.cpp  structs.h
test/: mover.test.cpp  rotator.test.cpp  solver.test.cpp  some.cpp
